<resources>
    <string name="app_name">Artivatic</string>
    <string name="facebook_app_id">FB_APP_ID</string>
    <string name="fb_login_protocol_scheme">FB_PROTOCOL_SCHEME</string>
    <string name="email_label">E-Mail</string>
    <string name="email_hint">abc@xyz.com</string>
    <string name="pass_label">Password</string>
    <string name="pass_hint">********</string>
    <string name="forgot_pass_label">Forgot Password</string>
    <string name="login_btn_label">Login</string>
    <string name="register_btn_label">Register</string>
    <string name="empty_mail">Please enter your registered e-mail</string>
    <string name="empty_pass">Please enter your password</string>
    <string name="pass_length">Password should be of at least 8 characters</string>
    <string name="ent_valid_mail">Please enter a valid email</string>
    <string name="mobile_length">Mobile number should be of 10 digits</string>
    <string name="reg_label">Please enter the below details to complete your registration</string>
    <string name="name">Name</string>
    <string name="name_reg">Name*</string>
    <string name="email_reg">E-Mail*</string>
    <string name="mobile_reg">Mobile Number*</string>
    <string name="mobile_num_hint">8762551753</string>
    <string name="pass_reg">Password*</string>
    <string name="conf_pass_reg">Confirm Password*</string>
    <string name="empty_field_reg">Please all the mandatory fields</string>
    <string name="pass_no_match">Passwords do not match</string>
    <string name="select_image">Select an image</string>
    <string name="done">Done</string>
    <string name="logout">Logout</string>
    <string name="welcome">Welcome</string>
    <string name="force_install">Please install</string>
    <string name="force_install_cs">You will have to install CamScanner app to use this app</string>
    <string name="ok">OK</string>
    <string name="gallery_permission">Please allow permission to access files</string>
    <string name="camera_permission">Please allow permission to access camera</string>
    <string name="not_selected">No action was performed</string>
    <string name="cancelled">User cancelled the process</string>
    <string name="a_msg_not_login">CamScanner user is not logged in</string>
    <string name="a_msg_device_limited">Device number limit exceeded</string>
    <string name="a_msg_api_version_illegal">This app is not registered</string>
    <string name="a_msg_app_unregistered">CamScanner can\'t return scanned file</string>
    <string name="a_msg_store_org_error">CamScanner can\'t return original image file</string>
    <string name="a_msg_store_jpg_error">CamScanner can\'t return scanned image file</string>
    <string name="a_msg_store_pdf_error">CamScanner can\'t return scanned PDF file</string>
    <string name="a_msg_num_limit">Scans exceed the amount configured in the granted API Key</string>
    <string name="a_msg_mode_unavailable">The chosen enhancement mode is unavailable for this app</string>
    <string name="a_msg_auth_expired">Authorization Expired</string>
    <string name="a_msg_invalid_source">Invalid image resource</string>
    <string name="a_msg_invalid_app">Invalid APP ID</string>
    <string name="a_msg_api_success">Open API call Success</string>
    <string name="generic_err">Something went wrong. Please try again later</string>
</resources>
