<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
                name="regHandler"
                type="rubenquadros.com.artivatic.viewmodel.RegistrationViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".view.Registration">

        <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="0dp"
                app:layout_constraintTop_toTopOf="parent">
        </include>

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <ImageView
                        android:tint="@color/colorPrimary"
                        android:layout_gravity="center"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/app_logo"
                        android:id="@+id/imageView2"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginStart="8dp"
                        tools:ignore="ContentDescription"/>
                <TextView
                        android:text="@string/name_reg"
                        android:textColor="@color/colorBlack"
                        android:fontFamily="@font/montserrat_regular"
                        android:textSize="@dimen/font_regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView4"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="24dp"/>
                <EditText
                        android:textColor="@color/colorBlack"
                        android:fontFamily="@font/montserrat_regular"
                        android:textSize="@dimen/font_regular"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:hint="@string/name"
                        android:id="@+id/editText"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:afterTextChanged="@{regHandler::afterNameTextChanged}"
                        tools:ignore="Autofill"/>
                <TextView
                        android:textColor="@color/colorBlack"
                        android:fontFamily="@font/montserrat_regular"
                        android:textSize="@dimen/font_regular"
                        android:text="@string/email_reg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView5"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"/>
                <EditText
                        android:textColor="@color/colorBlack"
                        android:fontFamily="@font/montserrat_regular"
                        android:textSize="@dimen/font_regular"
                        android:hint="@string/email_hint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:id="@+id/editText2"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="8dp"
                        android:afterTextChanged="@{regHandler::afterEmailTextChanged}"
                        tools:ignore="Autofill"/>
                <TextView
                        android:textColor="@color/colorBlack"
                        android:fontFamily="@font/montserrat_regular"
                        android:textSize="@dimen/font_regular"
                        android:text="@string/mobile_reg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView8"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"/>
                <EditText
                        android:textColor="@color/colorBlack"
                        android:fontFamily="@font/montserrat_regular"
                        android:textSize="@dimen/font_regular"
                        android:hint="@string/mobile_num_hint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:id="@+id/editText8"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="8dp"
                        android:maxLength="10"
                        android:afterTextChanged="@{regHandler::afterMobileTextChanged}"
                        tools:ignore="Autofill"/>
                <TextView
                        android:textColor="@color/colorBlack"
                        android:fontFamily="@font/montserrat_regular"
                        android:textSize="@dimen/font_regular"
                        android:text="@string/pass_reg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView6"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="8dp"/>
                <EditText
                        android:maxLength="12"
                        android:hint="@string/pass_hint"
                        android:fontFamily="@font/montserrat_regular"
                        android:textSize="@dimen/font_regular"
                        android:textColor="@color/colorBlack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:id="@+id/editText3"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="8dp"
                        android:afterTextChanged="@{regHandler::afterPassTextChanged}"
                        tools:ignore="Autofill"/>
                <TextView
                        android:textColor="@color/colorBlack"
                        android:fontFamily="@font/montserrat_regular"
                        android:textSize="@dimen/font_regular"
                        android:text="@string/conf_pass_reg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView7"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"/>
                <EditText
                        android:textColor="@color/colorBlack"
                        android:textSize="@dimen/font_regular"
                        android:fontFamily="@font/montserrat_regular"
                        android:maxLength="12"
                        android:hint="@string/pass_hint"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:id="@+id/editText4"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:afterTextChanged="@{regHandler::afterConfPassTextChanged}"
                        tools:ignore="Autofill"
                        android:layout_marginBottom="8dp"/>
                <Button
                        android:textSize="@dimen/font_bold"
                        android:fontFamily="@font/montserrat_bold"
                        android:textColor="@color/colorWhite"
                        android:background="@color/colorPrimary"
                        android:text="@string/register_btn_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/button"
                        android:layout_marginTop="24dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="16dp"
                        android:onClick="@{regHandler::onRegBtnClicked}"/>
            </LinearLayout>
        </ScrollView>
        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/toolbar"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:visibility="gone"/>
    </android.support.constraint.ConstraintLayout>
</layout>