<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
                name="loginHandler"
                type="rubenquadros.com.artivatic.viewmodel.LoginViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
            tools:context=".view.Login"
            android:id="@+id/parent"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="0dp"
                android:layout_marginEnd="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="0dp"
                app:layout_constraintTop_toTopOf="parent">
        </include>
        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:text="@string/email_label"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="@dimen/font_regular"
                app:layout_constraintStart_toStartOf="@+id/toolbar"
                app:layout_constraintEnd_toEndOf="@+id/toolbar"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                android:layout_marginTop="16dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:id="@+id/email"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:hint="@string/email_hint"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="@dimen/font_regular"
                android:textColor="@color/colorBlack"
                tools:ignore="Autofill"
                android:afterTextChanged="@{loginHandler::afterEmailTextChanged}"/>
        <TextView
                android:text="@string/pass_label"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="@dimen/font_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/email"
                app:layout_constraintStart_toStartOf="@+id/email"
                app:layout_constraintEnd_toEndOf="@+id/email"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginStart="8dp"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/pass"
                app:layout_constraintTop_toBottomOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintEnd_toEndOf="@+id/textView3"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/pass_hint"
                android:maxLength="12"
                android:textColor="@color/colorBlack"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="@dimen/font_regular"
                tools:ignore="Autofill"
                android:afterTextChanged="@{loginHandler::afterPassTextChanged}"/>
        <TextView
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="@dimen/font_regular"
                android:text="@string/forgot_pass_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/forgotPass"
                app:layout_constraintTop_toBottomOf="@+id/pass"
                app:layout_constraintStart_toStartOf="@+id/pass"
                app:layout_constraintEnd_toEndOf="@+id/pass"
                android:layout_marginTop="24dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>
        <Button
                android:fontFamily="@font/montserrat_bold"
                android:textSize="@dimen/font_bold"
                android:text="@string/register_btn_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/registerBtn"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="16dp"
                android:textColor="@color/colorPrimary"
                android:background="@color/colorSecondary"
                app:layout_constraintBottom_toBottomOf="parent"
                android:onClick="@{loginHandler::regBtnClicked}"/>

        <com.facebook.login.widget.LoginButton
                android:fontFamily="@font/montserrat_bold"
                android:textSize="@dimen/font_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/registerBtn"
                app:layout_constraintStart_toStartOf="@+id/registerBtn"
                app:layout_constraintEnd_toEndOf="@+id/registerBtn"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="16dp"
                android:id="@+id/loginButton"
                android:onClick="@{loginHandler::facebookBtnClicked}"/>


        <Button
                android:fontFamily="@font/montserrat_bold"
                android:textSize="@dimen/font_bold"
                android:text="@string/login_btn_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loginBtn"
                android:textColor="@color/colorWhite"
                android:background="@color/colorPrimary"
                android:onClick="@{loginHandler::loginBtnClicked}"
                app:layout_constraintStart_toStartOf="@+id/loginButton"
                app:layout_constraintEnd_toEndOf="@+id/loginButton"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/loginButton"
                android:layout_marginStart="8dp"/>
        <ImageView
                android:tint="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/app_logo"
                android:id="@+id/imageView2"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                tools:ignore="ContentDescription"/>
        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/toolbar"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:visibility="gone"/>

    </android.support.constraint.ConstraintLayout>

</layout>